Fix top padding on mobile.

--- a/css/bulk-add.less
+++ b/css/bulk-add.less
@@ -23,6 +23,10 @@ h4.title {
 
 .main {
 	margin-top: 60px;
+
+	@media (max-width: 979px) {
+		margin-top: 1em;
+	}
 }
 
 .navbar a {
